# aws-iot-device-sdk-embedded-C

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  JenkinsFileLoop  Jenkinsfile  LICENSE  MISRA.md  Makefile  NOTICE.txt  PortingGuide.md  README.md  SECURITY.md  ci_test_spelling.sh  configure.sh  get-docker.sh  index.md  install-linux.sh  install.sh  iot_config.h.in  latest  manifest.yml  security.md
demos/: CMakeLists.txt  Makefile  README.md  aws_iot_demo.h  aws_iot_demo_config.h  aws_iot_demo_mqtt.c  aws_iot_demo_shadow.c  config.h  iot_config.h  iot_demo.h  iot_demo_config.h  iot_demo_mqtt.c  lexicon.txt  mqtt_demo.c  readme.md
demos/app/: CMakeLists.txt  iot_demo.c  iot_demo_arguments.c
demos/app/posix/: CMakeLists.txt  iot_demo_arguments_posix.c  iot_demo_posix.c
demos/app/win32/: iot_demo_arguments_win32.c
demos/certs/: ca.key  mosquitto.conf  server.csr  server.key
demos/defender/defender_demo/: CMakeLists.txt  core_mqtt_config.h  defender_config.h  defender_demo.c  demo_config.h  metrics_collector.c  metrics_collector.h  mqtt_operations.c  mqtt_operations.h  report_builder.c  report_builder.h
demos/defender/defender_demo_json/: CMakeLists.txt  core_mqtt_config.h  defender_config.h  defender_demo.c  demo_config.h  metrics_collector.c  metrics_collector.h  mqtt_operations.c  mqtt_operations.h  report_builder.c  report_builder.h
demos/fleet_provisioning/: readme.md
demos/fleet_provisioning/fleet_provisioning_csr/: CMakeLists.txt  demo_config.h  fleet_provisioning_config.h  fleet_provisioning_csr_demo.c  fleet_provisioning_with_csr_demo.c  mqtt_operations.c  mqtt_operations.h
demos/fleet_provisioning/fleet_provisioning_keys_cert/: CMakeLists.txt  demo_config.h  fleet_provisioning_keys_cert_demo.c  fleet_provisioning_serializer.c  fleet_provisioning_serializer.h  mqtt_operations.c  mqtt_operations.h  pkcs11_operations.c  pkcs11_operations.h
demos/fleet_provisioning/fleet_provisioning_keys_cert_pkcs11/: example_claim_policy.json
demos/fleet_provisioning/fleet_provisioning_with_csr/: CMakeLists.txt  claim_policy.json  core_mqtt_config.h  demo_config.h  demo_template.json  fleet_provisioning_config.h  fleet_provisioning_csr_demo.c  fleet_provisioning_payload_operations.c  fleet_provisioning_payload_operations.h  fleet_provisioning_serializer.c  fleet_provisioning_serializer.h  fleet_provisioning_with_csr_demo.c  mqtt_operations.c  mqtt_operations.h  pkcs11_operations.c  pkcs11_operations.h
demos/fleet_provisioning/fleet_provisioning_with_csr_pkcs11/: fleet_provisioning_serializer.h
demos/greengrass/greengrass_demo_local_auth/: CMakeLists.txt  README.md  core_mqtt_config.h  demo_config.h  greengrass_auth_conf.json  greengrass_demo_local_auth.c  openssl_posix.c  openssl_posix.h
demos/http/http_demo_basic_tls/: CMakeLists.txt  core_http_config.h  demo_config.h  http_config.h  http_demo_basic_tls.c  httpbin.org.crt
demos/http/http_demo_mutual_auth/: CMakeLists.txt  core_http_config.h  demo_config.h  http_config.h  http_demo_mutual_auth.c
demos/http/http_demo_mutual_tls/: CMakeLists.txt  demo_config.h  http_config.h  (+1 more)
demos/include/: aws_iot_alpn_defs.h  config.h  iot_demo_arguments.h  iot_demo_config.h  iot_demo_logging.h  transport_plaintext.h
demos/logging-stack/: logging_levels.h  logging_stack.h
demos/ota/: aws_ota_agent_config.h  demo_config.h  iot_appversion32.h
demos/posix/: CMakeLists.txt  aws_iot_demo_common_posix.c  aws_iot_demo_mqtt_posix.c  aws_iot_demo_posix.h  aws_iot_demo_shadow_posix.c  iot_demo_arguments_posix.c  iot_demo_common_posix.c  iot_demo_mqtt_posix.c  iot_demo_posix.c  iot_demo_posix.h
demos/source/: aws_iot_demo_defender.c  aws_iot_demo_jobs.c  aws_iot_demo_shadow.c  iot_demo_mqtt.c
demos/src/: aws_iot_demo_defender.c  aws_iot_demo_jobs.c  aws_iot_demo_onboarding.c  aws_iot_demo_provisioning.c  aws_iot_demo_provisioning_with_csr.c  aws_iot_demo_shadow.c  iot_demo_mqtt.c  mqtt_demo.c  mqtt_demo_plaintext.c  transport_plaintext.c
demos/transport/: CMakeLists.txt  tls_config.h  tls_utils.c  tls_utils.h  transport_config.h  transport_utils.c  transport_utils.h
integration-test/: CMakeLists.txt  lexicon.txt  mqtt_system_test.c
integration-test/custom_test_runner/: custom_unity_runner.c  custom_unity_runner.h  lexicon.txt
integration-test/http/: CMakeLists.txt  core_http_config.h  http_system_test.c  test_config.h
integration-test/mqtt/: CMakeLists.txt  core_mqtt_config.h  mqtt_system_test.c  test_config.h
integration-test/pkcs11/: CMakeLists.txt
integration-test/shadow/: CMakeLists.txt  core_mqtt_config.h  shadow_config.h  shadow_system_test.c  test_config.h
libraries/: CMakeLists.txt
libraries/platform/: iot_network.h  iot_threads.h  lexicon.txt
libraries/standard/: CMakeLists.txt
platform/: CMakeLists.txt  README.md  function_definitions.cmake  lexicon.txt  platformFilePaths.cmake
platform/include/: clock.h  iot_clock.h  iot_logging.h  iot_network_mbedtls.h  iot_network_metrics.h  logging.h  logging_stack.h  network.h  network_interface.h  ota_os_interface.h  reconnect.h  retry_utils.h  transport_interface.h  transport_reconnect.h
platform/network/: iot_network_mbedtls.c  iot_network_metrics.c
platform/ota/: CMakeLists.txt
platform/posix/: CMakeLists.txt  clock_posix.c  iot_clock_posix.c  iot_logging.c  logging.c  posixFilePaths.cmake  retry_utils_posix.c
tests/: CMakeLists.txt  README.md  aws_iot_tests_config.h  aws_iot_tests_network.c  iot_config.h  iot_tests.c  iot_tests_config.h  iot_tests_network.c  lexicon.txt
tests/app/: iot_tests_posix.c  iot_tests_win32.c
tests/common/: CMakeLists.txt  iot_tests_common.c
tests/defender/: CMakeLists.txt  aws_iot_tests_defender.c  aws_iot_tests_defender_api.c
tests/integration/: Makefile  README.md
tests/jobs/: CMakeLists.txt  aws_iot_tests_jobs.c
tests/mqtt/: CMakeLists.txt  aws_iot_tests_mqtt.c  iot_tests_mqtt.c
tests/serializer/: CMakeLists.txt  iot_test_serializer_cbor.c  iot_tests_serializer.c
tests/shadow/: CMakeLists.txt  aws_iot_tests_shadow.c
tests/unity/: CMakeLists.txt
(+7615 files in other folders)
